--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@
 # Proyecto: The Lambda Matrix
 # Autor: Hernan Ander Chambilla Chambilla
 # CoAutor: Carlos Alfredo Percca Anchapuri
+# CoAutor: Elian Yeltzin Paniagua Mariaca
 # Fecha: 2021-06-20
 
 # Define la versión mínima de CMake requerida
